--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@progress/kendo-data-query": "^1.6.0",
+    "@progress/kendo-drawing": "^1.17.5",
+    "@progress/kendo-licensing": "^1.3.0",
+    "@progress/kendo-react-buttons": "^5.14.1",
+    "@progress/kendo-react-dateinputs": "^5.14.1",
+    "@progress/kendo-react-dialogs": "^5.14.1",
+    "@progress/kendo-react-dropdowns": "^5.14.1",
+    "@progress/kendo-react-form": "^5.14.1",
+    "@progress/kendo-react-grid": "^5.14.1",
+    "@progress/kendo-react-inputs": "^5.14.1",
+    "@progress/kendo-react-intl": "^5.14.1",
+    "@progress/kendo-react-labels": "^5.14.1",
+    "@progress/kendo-react-layout": "^5.14.1",
+    "@progress/kendo-react-notification": "^5.14.1",
+    "@progress/kendo-react-tooltip": "^5.14.1",
+    "@progress/kendo-theme-default": "^10.3.1",
+    "hammerjs": "^2.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
